# border-object-image

./: .gitignore  README.md  border_with_hanging.py  main.py  pyproject.toml
