[project]
name = "border-object-image"
version = "0.1.0"
description = ""
authors = [
    {name = "Beckem",email = "boychienga12@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.24.0",
    "opencv-python>=4.8.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
